# pipetastic-foldl

./: README.md  pipetastic-foldl.cabal
src/Control/Foldl/: Pipes.hs
tests/: test.hs
