name:          pipetastic-foldl
version:       0.0.0.1
license:       BSD3
license-file:  LICENSE
data-files:    
author:        Daniel Díaz Carrete
maintainer:    diaz_carrete@yahoo.com
category:      System
build-type:    Simple
cabal-version: >= 1.10
Synopsis:      pipes parsers -> foldl folds

Extra-Source-Files:
    README.md

Library
    default-language: Haskell2010
    hs-source-dirs: src
    exposed-modules: 
        Control.Foldl.Pipes
    other-modules: 
    ghc-options: -Wall -threaded -O2
    build-depends:         
        base >= 4.4 && < 5,
        transformers >= 0.2 && < 0.5,
        free >= 4.2 && < 5,
        pipes >= 4.1.3 && < 4.2,
        pipes-parse >=3.0.1 && <3.1,
        foldl >= 1.0.7


Test-suite test
    default-language:
      Haskell2010
    type:
      exitcode-stdio-1.0
    hs-source-dirs:
      tests
    main-is:
      test.hs
    ghc-options:    -Wall -threaded
    build-depends:
        base >= 4.4 && < 5
      , transformers >= 0.2 && < 0.5
      , free >= 4.2 && < 5
      , pipes >= 4.1.2 && < 4.2
      , pipes-bytestring >= 2.1.0 && < 2.2
      , pipes-text >= 0.0.0.10 && < 0.0.2
      , text >= 0.11.2 && < 1.2
      , pipes-parse >=3.0.1 && <3.1
      , tasty >= 0.9
      , tasty-hunit >= 0.9
      , attoparsec >= 0.11
      , pipes-attoparsec >= 0.5
      , pipes-aeson >= 0.4.1.2
      , aeson 
      , pipes-group >= 1.0.1
      , bytestring >= 0.10
      , lens >= 4
      , foldl >= 1.0.7
      , pipetastic-foldl

Source-repository head
    type:     git
    location: https://github.com/danidiaz/pipetastic-foldl.git

